Pro 1.0.13
==========

Fixes:
 - Fixed tests (testng) exection from ant script (MODELER-438)
 - Finish review of methods for DTO <-> Model objects conversion (MODELER-405)
 - Refactor walking the UIComponent objects within a panels collection (MODELER-437)
 - Fixed: walking functionality from MODELER-437 iterates multiple times over the same component (MODELER-497)

Pro 1.0.12
==========

Fixes:
 - Edit of custom panel complains of duplicate name (MODELER-518)
 - Creating slider from within New Device dialog doesn't allow
   the creation of passive slider (MODELER-523)
 - Impossible to edit custom panel if not all attributes
   are defined in the first place (MODELER-527)

New features:
  - Make text box for rules bigger and not wrap its text (MODELER-526)

Pro 1.0.11
==========

Fixes:
 - Logout not working under Firefox (MODELER-507)
 - Designer can't handle multiple login with the same account (MODELER-508)

New features:

 - Support new features in Marantz AVR protocol: multiple-zone support and additional commandsr (MODELER-516)
 - Update DateTime protocol configuration (MODELER-517)
 - Add ip and port parameters to RRD4J graph protocol (MODELER-520)
 - Add controller configuration parameters for Samsung TV (MODELER-521)
 - Have empty option for commands in protocol definition
   with allowBlank constraint true when using list of options (MODELER-522)

Pro 1.0.10
==========

Fixes:
 - Fixed ConcurrentModificationException in BeanModelTable.clear (MODELER-467)
 - Remove sensor "color" from list of sensor types (MODELER-472)
 - Grid does not accept Tabbar, Tabbar item or other grid anymore (MODELER-350)
 - Fixed: Dragging a widget to or from grid would loose
   its linked sensor or command (MODELER-363)

New features:
 - Add regex and pollingInterval attributes to TCP/IP protocol (MODELER-448)
 - Sensors can be removed from Labels and Images, Commands from Buttons,
   SwitchCommands from Switches and SliderCommands from Sliders (MODELER-404)